cmake_minimum_required(VERSION 3.19)
project(Project_Euler)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(venv/include)
include_directories(venv/include/python2.7)

add_executable(Project_Euler
        venv/include/python2.7/abstract.h
        venv/include/python2.7/asdl.h
        venv/include/python2.7/ast.h
        venv/include/python2.7/bitset.h
        venv/include/python2.7/boolobject.h
        venv/include/python2.7/bufferobject.h
        venv/include/python2.7/bytearrayobject.h
        venv/include/python2.7/bytes_methods.h
        venv/include/python2.7/bytesobject.h
        venv/include/python2.7/cellobject.h
        venv/include/python2.7/ceval.h
        venv/include/python2.7/classobject.h
        venv/include/python2.7/cobject.h
        venv/include/python2.7/code.h
        venv/include/python2.7/codecs.h
        venv/include/python2.7/compile.h
        venv/include/python2.7/complexobject.h
        venv/include/python2.7/cStringIO.h
        venv/include/python2.7/datetime.h
        venv/include/python2.7/descrobject.h
        venv/include/python2.7/dictobject.h
        venv/include/python2.7/dtoa.h
        venv/include/python2.7/enumobject.h
        venv/include/python2.7/errcode.h
        venv/include/python2.7/eval.h
        venv/include/python2.7/fileobject.h
        venv/include/python2.7/floatobject.h
        venv/include/python2.7/frameobject.h
        venv/include/python2.7/funcobject.h
        venv/include/python2.7/genobject.h
        venv/include/python2.7/graminit.h
        venv/include/python2.7/grammar.h
        venv/include/python2.7/import.h
        venv/include/python2.7/intobject.h
        venv/include/python2.7/intrcheck.h
        venv/include/python2.7/iterobject.h
        venv/include/python2.7/listobject.h
        venv/include/python2.7/longintrepr.h
        venv/include/python2.7/longobject.h
        venv/include/python2.7/marshal.h
        venv/include/python2.7/memoryobject.h
        venv/include/python2.7/metagrammar.h
        venv/include/python2.7/methodobject.h
        venv/include/python2.7/modsupport.h
        venv/include/python2.7/moduleobject.h
        venv/include/python2.7/node.h
        venv/include/python2.7/object.h
        venv/include/python2.7/objimpl.h
        venv/include/python2.7/opcode.h
        venv/include/python2.7/osdefs.h
        venv/include/python2.7/parsetok.h
        venv/include/python2.7/patchlevel.h
        venv/include/python2.7/pgen.h
        venv/include/python2.7/pgenheaders.h
        venv/include/python2.7/py_curses.h
        venv/include/python2.7/pyarena.h
        venv/include/python2.7/pycapsule.h
        venv/include/python2.7/pyconfig.h
        venv/include/python2.7/pyctype.h
        venv/include/python2.7/pydebug.h
        venv/include/python2.7/pyerrors.h
        venv/include/python2.7/pyexpat.h
        venv/include/python2.7/pyfpe.h
        venv/include/python2.7/pygetopt.h
        venv/include/python2.7/pymacconfig.h
        venv/include/python2.7/pymactoolbox.h
        venv/include/python2.7/pymath.h
        venv/include/python2.7/pymem.h
        venv/include/python2.7/pyport.h
        venv/include/python2.7/pystate.h
        venv/include/python2.7/pystrcmp.h
        venv/include/python2.7/pystrtod.h
        venv/include/python2.7/Python-ast.h
        venv/include/python2.7/Python.h
        venv/include/python2.7/pythonrun.h
        venv/include/python2.7/pythread.h
        venv/include/python2.7/rangeobject.h
        venv/include/python2.7/setobject.h
        venv/include/python2.7/sliceobject.h
        venv/include/python2.7/stringobject.h
        venv/include/python2.7/structmember.h
        venv/include/python2.7/structseq.h
        venv/include/python2.7/symtable.h
        venv/include/python2.7/sysmodule.h
        venv/include/python2.7/timefuncs.h
        venv/include/python2.7/token.h
        venv/include/python2.7/traceback.h
        venv/include/python2.7/tupleobject.h
        venv/include/python2.7/ucnhash.h
        venv/include/python2.7/unicodeobject.h
        venv/include/python2.7/warnings.h
        venv/include/python2.7/weakrefobject.h
        venv/lib/python2.7/config/config.c
        all.h
        define.h
        functions.h
        pe101.cpp
        pe102.cpp
        pe105.cpp
        pe112.cpp
        pe123.cpp
        pe124.cpp
        pe125.cpp
        pe131.cpp
        pe140.cpp
        pe146.cpp
        pe162.cpp
        pe164.cpp
        pe179.cpp
        pe187.cpp
        pe193.cpp
        pe204.cpp
        pe205.cpp
        pe206.cpp
        pe207.cpp
        pe214.cpp
        pe216.cpp
        pe254.cpp
        pe258.cpp
        pe293.cpp
        pe31.cpp
        pe315.cpp
        pe32.cpp
        pe329.cpp
        pe33.cpp
        "pe343-Better algorithm.cpp"
        pe343.cpp
        pe346.cpp
        pe347.cpp
        pe348.cpp
        pe35.cpp
        pe357.cpp
        pe358.cpp
        pe38.cpp
        pe381.cpp
        pe386.cpp
        pe387.cpp
        pe39.cpp
        pe40.cpp
        pe401.cpp
        pe407.cpp
        pe42.cpp
        pe43.cpp
        pe44.cpp
        pe45.cpp
        pe46.cpp
        pe47.cpp
        pe479.cpp
        pe49.cpp
        pe493.cpp
        pe50.cpp
        pe500.cpp
        pe504.cpp
        pe506.cpp
        pe512.cpp
        pe52.cpp
        pe54.cpp
        pe549.cpp
        pe58.cpp
        pe581.cpp
        pe59.cpp
        pe60.cpp
        pe601.cpp
        pe61.cpp
        pe62.cpp
        pe65.cpp
        pe70.cpp
        pe71.cpp
        pe72.cpp
        pe73.cpp
        pe74.cpp
        pe76.cpp
        pe77.cpp
        pe78.cpp
        pe81.cpp
        pe82.cpp
        pe83.cpp
        pe85.cpp
        pe87.cpp
        pe89.cpp
        pe90.cpp
        pe91.cpp
        pe94.cpp
        pe95.cpp
        pe98.cpp
        pe99.cpp)
